列表页重构1/2  单页重构1/2

--- a/sys/error.html
+++ b/sys/error.html
@@ -19,16 +19,14 @@
 				<a href="http://www.jx3pve.com/">Error</a>
 			</h1>
 			<p class="tips">非常抱歉，未找到资源，可能由于网站改版，内容位置被移动，请尝试搜索：</p>
-			<p class="more">如果仍未找到，建议您尝试通过
-				<a href="http://www.jx3pve.com/bbs" target="_blank">论坛</a>
-				论坛求助，或查看<a href="http://www.jx3pve.com/sitemap" target="_blank">网站地图</a>寻找，也可以直接向我们<a href="http://www.jx3pve.com/feedback/" target="_blank">反馈</a>。
+			<p class="more">如果仍未找到，建议您尝试通过<a href="http://www.jx3pve.com/sitemap" target="_blank">网站地图</a>寻找，或在<a href="http://www.jx3pve.com/bbs" target="_blank">论坛</a>论坛求助，也可以直接向我们<a href="http://www.jx3pve.com/feedback/" target="_blank">反馈</a>。
 			</p>
 			<div class="mb-tips">
 				<p>非常抱歉，未找到资源，请尝试：</p>
 				<ol>
-					<li><a href="http://www.jx3pve.com/bbs">论坛</a>求助</li>
 					<li><a href="http://www.jx3pve.com/sitemap">网站地图</a>寻找</li>
-					<li><a href="http://www.jx3pve.com/feedback/">反馈中心</a>提交</li>
+					<li><a href="http://www.jx3pve.com/bbs">论坛</a>求助</li>
+					<li><a href="http://www.jx3pve.com/feedback">反馈中心</a>提交</li>
 					<li>尝试搜索</li>
 				</ol>
 			</div>
